--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,12 @@
 
     <string name="msg_profile_update_success">Your profile is updated successfully.</string>
 
+    <string name="title_activity_dashboard">MyShopping</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="double_click_exit">Please click back again to exit</string>
+    <string name="title_orders">Orders</string>
+    <string name="title_products">Products</string>
+
 </resources>
